# study-langchain

./: .gitignore  lesson1.py  pyproject.toml
lesson/: lesson1.py  lesson2.py  lesson3.py  lesson4.py  lesson5.py
lesson/lesson1/: 异步调用.py  调用.py
lesson/lesson2/: lesson2.py  使用 RunnablePassthrough.py  创建模板.py  多变量模板.py  多变量链.py  异步链.py  简单的问答系统.py  简单链_模板+模型.py
lesson/lesson3/: 1.手动管理对话历史.py  2.手动管理对话历史_管道链写法.py  3.ConversationBufferMemory基本用法.py  4使用InMemoryChatMessageHistory.py  5.在链中集成记忆.py  6.交互式聊天机器人.py
lesson/lesson4/: 1.创建 ReAct 代理.py  2.create_agent.py  3.多功能代理.py  4.交互版多功能代理.py
lesson/lesson5/: 1.检索增强生成(RAG).py  2.带记忆的多轮对话 RAG.py  3.循环交互式带记忆多轮对话.py
lesson/lesson6/: 1.构建最简单的状态机代理.py  2.添加条件边：让代理决定是否调用工具.py  3.将RAG集成到图中.py
lesson/lesson7/: 1.状态持久化：MemorySaver 与检查点.py
